k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-api
  namespace: assignment
  
livenessProbe:
  httpGet:
    path: /health
    port: 8080
  initialDelaySeconds: 20

readinessProbe:
  httpGet:
    path: /health
    port: 8080
  initialDelaySeconds: 10

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: employee-api

  template:
    metadata:
      labels:
        app: employee-api

    spec:
      containers:

      - name: employee-api

        image: arjunbyahut/employee-api:v1

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "250m"
            memory: "256Mi"
