k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service
  namespace: assignment

spec:
  selector:
    app: employee-api

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
