k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: assignment

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

  clusterIP: None
